--- a/dog.css
+++ b/dog.css
@@ -14,6 +14,13 @@ html{
     margin-top: 30px;
     gap: 100px;
 }
+@media (max-width: 1450px){
+    .photos{
+        grid-template-columns: repeat(2, 300px);
+        grid-template-rows: repeat(3, 320px);
+        gap: 200px;
+    }
+}
 .photos > img{
     height: 300px;
     width: 300px;
